--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.17.6 <3.0.0"
 
+
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
 # consider running `flutter pub upgrade --major-versions`. Alternatively,
@@ -34,8 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
-  flutter_svg: ^0.17.4
-
+  flutter_svg: ^1.1.5
+  shared_preferences: ^2.0.15
+  sqflite: ^2.1.0+1
+  dio: ^4.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
