--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,17 +77,18 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-#   fonts:
-#     - family: Schyler
-#       fonts:
-#         - asset: fonts/Schyler-Regular.ttf
-#         - asset: fonts/Schyler-Italic.ttf
-#           style: italic
-#     - family: Trajan Pro
-#       fonts:
-#         - asset: fonts/TrajanPro.ttf
-#         - asset: fonts/TrajanPro_Bold.ttf
-#           weight: 700
+  fonts:
+   - family: Inter
+     fonts:
+       - asset: assets/fonts/Inter-Black.ttf
+       - asset: assets/fonts/Inter-Bold.ttf
+       - asset: assets/fonts/Inter-ExtraBold.ttf
+       - asset: assets/fonts/Inter-ExtraLight.ttf
+       - asset: assets/fonts/Inter-Light.ttf
+       - asset: assets/fonts/Inter-Medium.ttf
+       - asset: assets/fonts/Inter-Regular.ttf
+       - asset: assets/fonts/Inter-SemiBold.ttf
+       - asset: assets/fonts/Inter-Thin.ttf
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
