--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.0.15
   sqflite: ^2.1.0+1
   dio: ^4.0.6
+  json_serializable: ^6.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
