--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   equatable: ^2.0.5
   weather_icons: ^3.0.0
   path_provider: ^2.0.11
+  provider: ^6.0.4
+  firebase_auth: ^4.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
